# animit

./: .gitignore  README.md
admin/: knip.config.ts  openapi-ts.config.ts  package-lock.json  package.json
admin/src/: main.tsx  routeTree.gen.ts
admin/src/client/: index.ts  sdk.gen.ts  types.gen.ts
admin/src/components/: profile-dropdown.tsx  sign-out-dialog.tsx
admin/src/components/layout/: app-logo.tsx  app-sidebar.tsx  nav-user.tsx
admin/src/lib/: handle-server-error.ts
admin/src/stores/: auth-store.ts
docs/: package.json
docs/docs/: analytics.md  anime.md  authentication.md  discovery.md  index.md  notification.md  onboard.md  overview.md  recommendation.md  template.md  user-anime.md
docs/docs/.vitepress/: config.mts
server/: main.py  pyproject.toml
server/animit/: api.py  app.py  config.py  exceptions.py  postgres.py  redis.py
server/animit/health/: endpoints.py
server/animit/kit/: email.py
server/animit/kit/db/models/: base.py
server/animit/kit/repository/: __init__.py  base.py
server/animit/login_code/: endpoints.py  schemas.py  service.py
server/animit/models/: __init__.py  login_code.py  user.py
server/animit/scripts/: revision.py  upgrade.py  uv.py
server/animit/user/: repository.py  service.py  sorting.py
server/migrations/: env.py
server/migrations/versions/: 1cc4c9eb3d5f_2bc3752b_e39c_4171_ae5b_a31b80d3e6bb.py  488b2403d5c3_939dab31_d8fe_4ef4_8b21_1d2cef3d952d.py  69c95b26e600_b650b35a_c6d1_4d91_8549_50c65d8cf5c4.py  ac582cb9e1c3_1ec7d339_d962_446d_bbfe_b61a8bfc49a0.py  cd3c5a31aeae_init_db_and_add_user_table.py
(+9 files in other folders)
